--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    /* line-height: 1.15;
-    box-sizing: border-box; */
+    /* box-sizing: border-box; */
     padding: 0;
     margin: 0;
     -webkit-tap-highlight-color: transparent;
@@ -13,9 +12,6 @@
 
   .header{
     text-align: center;
-    /* font-weight: bold;
-    margin-top: 3rem;
-    color: #4F4F4F; */
   }
 
   .header h2{
@@ -74,4 +70,19 @@
 
   .logo img{
     width: 100%;
+  }
+
+  @media only screen and (max-width: 425px) and (min-width: 375px) {
+    .content{
+        padding: 4rem 2rem;
+        text-align: center;
+        line-height: 1.60;
+      }
+
+      .logo{
+        width: 15%;
+        /* margin-top: 4rem; */
+        margin-left: 1.5rem;
+        margin: 1rem auto;
+      }
   }
