--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@
 
   @media only screen and (max-width: 425px) and (min-width: 375px) {
     .content{
-        padding: 4rem 2rem;
+        width: 100%;
+        padding: 3rem 30px;
         text-align: center;
         line-height: 1.60;
       }
