--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    /* box-sizing: border-box; */
     padding: 0;
     margin: 0;
-    -webkit-tap-highlight-color: transparent;
+  }
+
+  #veri{
+    width: 100%;
   }
 
 
@@ -72,7 +74,7 @@
     width: 100%;
   }
 
-  @media only screen and (max-width: 425px) and (min-width: 375px) {
+  @media only screen and (max-width: 425px) and (min-width: 350px) {
     .content{
         width: 100%;
         padding: 3rem 30px;
@@ -82,7 +84,6 @@
 
       .logo{
         width: 15%;
-        /* margin-top: 4rem; */
         margin-left: 1.5rem;
         margin: 1rem auto;
       }
